added post put delete for beer,customer

--- a/udemy beer project.postman_collection.json
+++ b/udemy beer project.postman_collection.json
@@ -4,7 +4,13 @@
 	"description": "",
 	"order": [
 		"01ac1694-8806-3b44-7cef-2b211eb32659",
-		"cbb465e3-e050-b74e-3529-6a59a98fb16c"
+		"cbb465e3-e050-b74e-3529-6a59a98fb16c",
+		"91b406c6-b0f8-1617-6584-71c4fe7f67ce",
+		"eaa6490a-4600-3735-8cc0-d8c3c05ee0d7",
+		"98ce931b-8402-a773-efda-d25bb5469d64",
+		"47b949dc-73e9-ec82-5c4b-30079359046d",
+		"5c83b8ce-0960-82f5-3995-ecb454c1a618",
+		"2c843e20-8c58-b02e-6233-fd273390ae47"
 	],
 	"folders": [],
 	"folders_order": [],
@@ -36,6 +42,121 @@
 			"helperAttributes": {}
 		},
 		{
+			"id": "2c843e20-8c58-b02e-6233-fd273390ae47",
+			"headers": "",
+			"headerData": [],
+			"url": "http://localhost:8080/api/v1/cust/113bc867-582e-42ae-8802-327c22b023a0",
+			"queryParams": [],
+			"pathVariables": {},
+			"pathVariableData": [],
+			"preRequestScript": null,
+			"method": "DELETE",
+			"collectionId": "6e934973-cfd5-9f32-8e4f-5dc6fb10e393",
+			"data": null,
+			"dataMode": "params",
+			"name": "Delete Customer",
+			"description": "",
+			"descriptionFormat": "html",
+			"time": 1630154652094,
+			"version": 2,
+			"responses": [],
+			"tests": null,
+			"currentHelper": "normal",
+			"helperAttributes": {}
+		},
+		{
+			"id": "47b949dc-73e9-ec82-5c4b-30079359046d",
+			"headers": "",
+			"headerData": [],
+			"url": "http://localhost:8080/api/v1/cust/113bc867-582e-42ae-8802-327c22b023a0",
+			"queryParams": [],
+			"pathVariables": {},
+			"pathVariableData": [],
+			"preRequestScript": null,
+			"method": "PUT",
+			"collectionId": "6e934973-cfd5-9f32-8e4f-5dc6fb10e393",
+			"data": null,
+			"dataMode": "params",
+			"name": "Put Customer",
+			"description": "",
+			"descriptionFormat": "html",
+			"time": 1630154631728,
+			"version": 2,
+			"responses": [],
+			"tests": null,
+			"currentHelper": "normal",
+			"helperAttributes": {}
+		},
+		{
+			"id": "5c83b8ce-0960-82f5-3995-ecb454c1a618",
+			"headers": "",
+			"headerData": [],
+			"url": "http://localhost:8080/api/v1/beer/113bc867-582e-42ae-8802-327c22b023a0",
+			"queryParams": [],
+			"pathVariables": {},
+			"pathVariableData": [],
+			"preRequestScript": null,
+			"method": "DELETE",
+			"collectionId": "6e934973-cfd5-9f32-8e4f-5dc6fb10e393",
+			"data": null,
+			"dataMode": "params",
+			"name": "Delete Beer",
+			"description": "",
+			"descriptionFormat": "html",
+			"time": 1630152498663,
+			"version": 2,
+			"responses": [],
+			"tests": null,
+			"currentHelper": "normal",
+			"helperAttributes": {}
+		},
+		{
+			"id": "91b406c6-b0f8-1617-6584-71c4fe7f67ce",
+			"headers": "",
+			"headerData": [],
+			"url": "http://localhost:8080/api/v1/beer/",
+			"queryParams": [],
+			"pathVariables": {},
+			"pathVariableData": [],
+			"preRequestScript": null,
+			"method": "POST",
+			"collectionId": "6e934973-cfd5-9f32-8e4f-5dc6fb10e393",
+			"data": null,
+			"dataMode": "params",
+			"name": "Post Beer",
+			"description": "",
+			"descriptionFormat": "html",
+			"time": 1630141201076,
+			"version": 2,
+			"responses": [],
+			"tests": null,
+			"currentHelper": "normal",
+			"helperAttributes": {}
+		},
+		{
+			"id": "98ce931b-8402-a773-efda-d25bb5469d64",
+			"headers": "",
+			"headerData": [],
+			"url": "http://localhost:8080/api/v1/beer/113bc867-582e-42ae-8802-327c22b023a0",
+			"queryParams": [],
+			"pathVariables": {},
+			"pathVariableData": [],
+			"preRequestScript": null,
+			"method": "PUT",
+			"collectionId": "6e934973-cfd5-9f32-8e4f-5dc6fb10e393",
+			"data": null,
+			"dataMode": "params",
+			"name": "Put Beer",
+			"description": "",
+			"descriptionFormat": "html",
+			"time": 1630151651342,
+			"version": 2,
+			"responses": [],
+			"tests": null,
+			"currentHelper": "normal",
+			"helperAttributes": {}
+		},
+		{
 			"id": "cbb465e3-e050-b74e-3529-6a59a98fb16c",
 			"headers": "",
 			"headerData": [],
@@ -52,6 +173,29 @@
 			"description": "",
 			"descriptionFormat": "html",
 			"time": 1630137373716,
+			"version": 2,
+			"responses": [],
+			"tests": null,
+			"currentHelper": "normal",
+			"helperAttributes": {}
+		},
+		{
+			"id": "eaa6490a-4600-3735-8cc0-d8c3c05ee0d7",
+			"headers": "",
+			"headerData": [],
+			"url": "http://localhost:8080/api/v1/cust",
+			"queryParams": [],
+			"pathVariables": {},
+			"pathVariableData": [],
+			"preRequestScript": null,
+			"method": "POST",
+			"collectionId": "6e934973-cfd5-9f32-8e4f-5dc6fb10e393",
+			"data": null,
+			"dataMode": "params",
+			"name": "Post Customer",
+			"description": "",
+			"descriptionFormat": "html",
+			"time": 1630154678760,
 			"version": 2,
 			"responses": [],
 			"tests": null,
